<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".presentation.profileTab.profile.ProfileTabFragment">

    <TextView
        android:id="@+id/tv_no_internet_headline"
        style="@style/Text.Headline1.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="16dp"
        android:text="@string/no_internet_headline" />

    <TextView
        android:id="@+id/tv_no_internet_instruction"
        style="@style/Text.Headline3.SemiBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="16dp"
        android:text="@string/no_internet_instruction"
        android:textAlignment="center" />

    <Button
        android:id="@+id/btn_no_internet"
        style="@style/Button.Big.Filled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="16dp"
        android:text="@string/no_internet_button" />
</LinearLayout>