<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="20dp">

    <ImageView
        android:id="@+id/iv_back"
        style="@style/BackNavigateArrow"
        android:contentDescription="@null"
        app:layout_constraintBottom_toTopOf="@id/tv_headline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tv_headline"
        style="@style/Text.Headline1.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/authorization_phone_headline"
        app:layout_constraintBottom_toTopOf="@id/tv_instruction"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_back"
        app:layout_goneMarginTop="64dp" />

    <TextView
        android:id="@+id/tv_instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/authorization_phone_instruction"
        android:textAppearance="@style/Text.Paragraph2"
        android:textColor="@color/black_solid_50"
        app:layout_constraintBottom_toTopOf="@id/il_phone_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_headline" />

    <Space
        android:id="@+id/spacer"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_instruction" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/il_phone_number"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/authorization_phone_hint_phone_number"
        app:layout_constraintBottom_toTopOf="@id/tv_policy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spacer">

        <EditText
            android:id="@+id/et_phone_number"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:digits="0123456789+-() "
            android:imeOptions="actionDone"
            android:inputType="phone"
            android:maxLength="16"
            android:paddingHorizontal="18dp"
            android:textAppearance="@style/Text.System.Placeholder"
            android:textColor="@color/black_solid_100" />

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/chk_policy"
        style="@style/SquareCheckBox"
        app:layout_constraintBottom_toBottomOf="@+id/tv_policy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_policy" />

    <TextView
        android:id="@+id/tv_policy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:autoLink="none"
        android:text="@string/authorization_phone_policy"
        android:textAppearance="@style/Text.Paragraph3.Regular"
        android:textColor="@color/black_solid_100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/chk_policy"
        app:layout_constraintTop_toBottomOf="@id/il_phone_number" />

    <Button
        android:id="@+id/btn_login"
        style="@style/Button.Big.Filled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:enabled="false"
        android:text="@string/authorization_phone_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_policy" />

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>